Improving accessibility on Chat screen

--- a/frontend/src/locale/en-US.json
+++ b/frontend/src/locale/en-US.json
@@ -3,6 +3,7 @@
   "TABS.SETTINGS.LABEL": "Settings",
 
   "CHAT.SEND_MESSAGE.INPUT.PLACEHOLDER": "Enter message",
+  "CHAT.SEND_MESSAGE.BUTTON.LABEL": "Send message",
 
   "SETTINGS.USER_NAME.INPUT.LABEL": "User name",
 
