--- a/frontend/src/locale/pt-BR.json
+++ b/frontend/src/locale/pt-BR.json
@@ -3,6 +3,7 @@
   "TABS.SETTINGS.LABEL": "Configurações",
 
   "CHAT.SEND_MESSAGE.INPUT.PLACEHOLDER": "Enviar mensagem",
+  "CHAT.SEND_MESSAGE.BUTTON.LABEL": "Enviar mensagem",
 
   "SETTINGS.USER_NAME.INPUT.LABEL": "Nome do usuário",
 
